src/pages/events/index.module.css
.container {
    min-height: 100vh;
    padding: 0 0.5rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.title a {
  color: #0070f3;
  text-decoration: none;
}

.title a:hover,
.title a:focus,
.title a:active {
  text-decoration: underline;
}

.title {
  margin: 0;
  line-height: 1.15;
  font-size: 4rem;
}

.main {
  /* margin-left: 250px; */
  padding: 5rem 0;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.main h2 {
  padding-top: 18px;
  border-bottom: solid 2px orangered;
}

.card2 {
  margin: 1rem;
  max-width: 26rem;
  min-height: 18rem;
  max-height: 20rem;
  flex: 1 1 45%;
  padding: 1.5rem;
  text-align: center;
  line-height: 5rem;
  color: inherit;
  text-decoration: none;
  border: 1px solid #eaeaea;
  border-radius: 10px;
  /* box-shadow: 0px 4px 0px #ccc; */
  /* box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px; */
  /* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px; */
  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
  /* transition: color 0.15s ease, border-color 0.15s ease, box-shadow 0.15s ease; */
  /* transition: all 0.15s ease; */
}

html[data-theme='dark'] .card2 {
  border: 1px solid #333;
  box-shadow: rgba(100, 100, 100, 0.12) 0px 1px 3px, rgba(100, 100, 100, 0.24) 0px 1px 2px;
  box-shadow: rgba(100, 100, 100, 0.1) 0px 1px 3px 0px, rgba(100, 100, 100, 0.06) 0px 1px 2px 0px;

}

.card2:hover,
.card2:focus,
.card2:active {
  /* color: #0070f3; */
  color: var(--ifm-color-primary);
  text-decoration: none;
  background-color: #fafafa;
  /* border-color: #0070f3; */
}

html[data-theme='dark']
.card2:hover,
html[data-theme='dark']
.card2:focus,
html[data-theme='dark']
.card2:active {
  /* color: #0070f3; */
  color: var(--ifm-navbar-link-hover-color);
  text-decoration: none;
  background-color: #242526;
  /* border-color: #0070f3; */
}

.card2 h3 {
  /* margin: 0 0 1rem 0; */
  font-size: 1.5rem;
}

.card2 p {
  margin: 0;
  font-size: 1.25rem;
  line-height: 1.5;
}

.card3 {
  min-height: 18rem;
  max-height: 18rem;
  max-width: 12rem;
}
.card3 h3 {
  font-size: 1.3rem;
}
@media only screen and (max-width: 880px) {
  .card3 {
    max-width: 10rem;
    max-height: 16rem;
    margin: 0.5rem;
    padding: 18px;
  }
  .card3 h3 {
    font-size: 1.2rem;
    margin-bottom: 0px;
  }
  
}


.grid {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: row;
  flex-wrap: wrap;
  max-width: 1400px;
  margin-top: 2rem;
}

.dropdown {
  /* background: var(--ifm-color-secondary-darkest); */
  border-radius: var(--ifm-button-border-radius);
  margin-left: 2rem;
}
.dropdown ul {
  height: 100%; 
  display: flex;
  align-items: center;
  flex-direction: row;
  justify-content: space-around;
  list-style: none;
  padding: 0;
  margin: 0;
  border-radius: var(--ifm-button-border-radius);
}

.dropdown ul > li {
  height: 100%;
}
.dropdown ul > li:first-child {
  border-right: black 1px solid;
}

.dropdown button {
  font-family: inherit;
  font-weight: var(--ifm-button-font-weight);
  text-decoration: none;
  font-size: 16px;
  height: 100%; 
  align-content: center;
  /* background-color: var(--ifm-button-background-color); */
  border: solid 1px #777;
  /* box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px; */
  min-width: 128px;
  min-height: 2rem;

}
.selectedButton {
  /* color: var(--ifm-color-primary) !important; */
  background-color: var(--ifm-color-secondary-dark);
  filter: brightness(95%);
}
.dropdown li:nth-child(odd) > button{
  border-radius: var(--ifm-button-border-radius) 0% 0% var(--ifm-button-border-radius);  
  border-right: none;
}
.dropdown li:nth-child(even) > button {
  border-radius: 0% var(--ifm-button-border-radius) var(--ifm-button-border-radius)  0%;
}
.dropdown button:hover:not(.selectedButton){
  filter: brightness(85%);
}

.searchBar {
  height: 34px;
  border-radius: var(--ifm-button-border-radius);
  border: 1px solid #777; 
  background-color: var(--ifm-background-surface-color);
  color: var(--ifm-color-content-secondary);
  padding: 8px;
}

.filterBar {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  padding: 12px 0;
}

@media only screen and (max-width: 880px) {
  .filterBar {
    flex-direction: column;
    justify-content: center;
    align-items: center;
    row-gap: 8px;
  }
  .dropdown {
    margin: 0px;
  }
}

.main .filterBar {
  width: 400px;
}

